--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "composer.json" }}
             - v1-dependencies-
-      - run: composer install -n --optimize-autoloader --classmap-authoritative
+      # - run: composer install -n --optimize-autoloader --classmap-authoritative
       - run: composer dump-autoload --optimize --classmap-authoritative
       - save_cache:
           key: composer-v1-({ checksum "composer.json" })
