modification du projet

--- a/config/packages/test/doctrine.yaml
+++ b/config/packages/test/doctrine.yaml
@@ -1,4 +1,8 @@
-doctrine:
-    dbal:
-        # "TEST_TOKEN" is typically set by ParaTest
-        dbname: 'main_test%env(default::TEST_TOKEN)%'
+# doctrine:
+#     dbal:
+#         # "TEST_TOKEN" is typically set by ParaTest
+#         # dbname: i2i
+#         # host: localhost
+#         # port: 3306
+#         # user: root
+#         # url: mysql://root:@127.0.0.1:3306/i2i
