--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=a262bc090a3b089564a5ded85766c183
+APP_SECRET=6ee0b33cdf22eefed82ab0492f1d5bfe474099d2
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
@@ -30,7 +30,7 @@ APP_SECRET=a262bc090a3b089564a5ded85766c183
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/i2i"
+DATABASE_URL="mysql://somi1pd2aku1deui:x2hp3pveye1lqfu0@c8u4r7fp8i8qaniw.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/u3kbhs0e6nqoau85"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
