--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,7 +13,9 @@
         <server name="SHELL_VERBOSITY" value="-1" />
         <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
         <server name="SYMFONY_PHPUNIT_VERSION" value="8.5" />
+        <env name="SYMFONY_PHPUNIT_VERSION" value="7.4.4" />
     </php>
+
 
     <testsuites>
         <testsuite name="Project Test Suite">
@@ -31,10 +33,4 @@
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
 
-    <!-- Run `composer require symfony/panther` before enabling this extension -->
-    <!--
-    <extensions>
-        <extension class="Symfony\Component\Panther\ServerExtension" />
-    </extensions>
-    -->
 </phpunit>
