--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,10 @@ on:
       - main
       - master
       - staging
-env:
-  ES_HTTP_PORT: 9209
+
 jobs:
   symfony:
-    name: Symfony 4.4.* (PHP ${{ matrix.php-versions }})
+    name: Symfony 4.4 (PHP ${{ matrix.php-versions }})
     # https://hub.docker.com/_/ubuntu/
     runs-on: ubuntu-20.04
     services:
@@ -24,7 +23,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php-versions: ['7.3', '8.0']
+        php-versions: ['7.3']
     steps:
       # —— Setup Github actions 🐙 —————————————————————————————————————————————
       # https://github.com/actions/checkout (official)
