--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,8 @@ jobs:
         uses: actions/checkout@v2
 
       # —— Composer 🧙‍️ —————————————————————————————————————————————————————————
-      - name: Validate composer.json and composer.lock
-        run: composer validate
+      # - name: Validate composer.json and composer.lock
+      #   run: composer validate
 
       - name: Get composer cache directory
         id: composer-cache
