--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,51 +1,36 @@
-name: CI Symfony 
+name: PHP Composer
+
 on:
   push:
-    branches:
-      - main
-      - master
-      - staging
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  symfony:
-    name: Symfony 4.4 (PHP ${{ matrix.php-versions }})
-    # https://hub.docker.com/_/ubuntu/
-    runs-on: ubuntu-20.04
-    services:
-      # https://docs.docker.com/samples/library/mysql/
-      mysql:
-        image: mysql:5.7
-        env:
-          MYSQL_ROOT_PASSWORD: root
-        ports:
-          - 3306:3306
+  build:
 
-    strategy:
-      fail-fast: true
-      matrix:
-        php-versions: ['7.3']
+    runs-on: ubuntu-latest
+
     steps:
-      # —— Setup Github actions 🐙 —————————————————————————————————————————————
-      # https://github.com/actions/checkout (official)
-      - name: Checkout
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      # —— Composer 🧙‍️ —————————————————————————————————————————————————————————
-      # - name: Validate composer.json and composer.lock
-      #   run: composer validate
+    - name: Validate composer.json and composer.lock
+      run: composer validate --strict
 
-      - name: Get composer cache directory
-        id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+    - name: Cache Composer packages
+      id: composer-cache
+      uses: actions/cache@v2
+      with:
+        path: vendor
+        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-php-
 
-      - name: Cache composer dependencies
-        uses: actions/cache@v1
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-progress
 
-       # —— Tests 🧙‍️ —————————————————————————————————————————————————————————
-      - name: Run functionnal and unit tests
-        run: |
-          php bin/phpunit
+    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
+    # Docs: https://getcomposer.org/doc/articles/scripts.md
+
+    # - name: Run test suite
+    #   run: composer run-script test
